--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
+    "firebase-admin": "^13.4.0",
     "google-auth-library": "^9.15.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
+    "nodemailer": "^7.0.5",
     "react": "^18.3.1",
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.6",
     "string-similarity": "^4.0.4",
@@ -37,6 +41,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
