--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
+    "cron": "^4.3.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "streamifier": "^0.1.1",
     "validator": "^13.15.15"
